# noncoding-RNA

./: exon_circTE_pipeline_v3_7_11.py
phylo_pruner_project/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
phylo_pruner_project/examples/: README.md
phylo_pruner_project/phylo_pruner/: __init__.py  main.py
phylo_pruner_project/scripts/: phylo_pruner
