[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phylo-pruner"
version = "0.1.0"
description = "Annotate and prune phylogenetic trees using the NCBI taxonomy database."
authors = [{name = "Your Name"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "ete3",
]

[project.urls]
Homepage = "https://github.com/your-org/phylo-pruner"
Documentation = "https://github.com/your-org/phylo-pruner#readme"
